# formula

./: README.md
.github/workflows/: create-release-on-tag.yml  formula-cs.yml  formula-java-publish.yml  formula-java.yml  formula-js-publish.yml  formula-js.yml  gradle.yml
docs/: TOKEN_TREE.MD
formula-cs/: formula-cs.sln
formula-cs/Formula/: DataContext.cs  Formula.cs  Lambda.cs  Ordinal.cs  ResolvedRollValue.cs  ResolvedValue.cs
formula-cs/FormulaTest/: DataContextTest.cs  DataContextTestCaseSource.cs  DataDrivenTestCaseSource.cs  ExpectedValues.cs  FormulaOptimizerTest.cs  FormulaPerformanceTest.cs  FormulaTest.cs  FormulaTest.csproj  FormulaTestCaseSource.cs  (+2 more)
formula-java/: build.gradle.kts  settings.gradle.kts
formula-js/: index.ts  package-lock.json  package.json  rollup.config.js  ts-config.release.json  tsconfig.json
formula-py/: pyproject.toml  requirements-lock.txt
formula-py/formula/: __init__.py  data_context.py  formula.py  formula_optimizer.py  resolvable.py  resolvable.pyi  resolved_roll_value.py  resolved_value.py  shunting_yard.py  static_resolvable.py
formula-py/formula/token/: __init__.py  token_tree.py  utils.py
formula-py/tests/: expected_values.py  formula_test_case.py  optimize_test_case.py  test_data_context.py  test_formula.py  test_formula_optimizer.py  test_resolved_value.py  test_token_tree.py  test_utils.py
formula-test/: data-context-test-cases.yml  formula-test-cases.csv  formula-test-cases.yml  optimize-test-cases.csv  optimize-test-cases.yml
java/: .gitignore  build.gradle.kts  settings.gradle.kts
(+232 files in other folders)
